fix: #1 test results statistics alignment

--- a/mw-webapp/src/logic/resultTestPage/ResultTestPage.module.scss
+++ b/mw-webapp/src/logic/resultTestPage/ResultTestPage.module.scss
@@ -36,8 +36,10 @@
 
 .resultHeaderContainer {
   @include regularContainer;
+  gap: $gapSmall;
 }
 
 .participantBlock {
-  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
